Add First Power BI Report to Home

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,4 +10,7 @@
     </datalist>
 <br></br>
     <p><a href="{% url 'movies:index' %}">Movies</a></p>
+
+    <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTZmOThmYjktYWYxZC00OGU3LWFjZDMtMmU5NzE3MTgyODYxIiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+
 {% endblock %}
