--- a/templates/home.html
+++ b/templates/home.html
@@ -11,10 +11,14 @@
 <br></br>
     <p><a href="{% url 'movies:index' %}">Movies</a></p>{% endcomment %}
 
+<p>Website and Report Creator/Owner:  Michelle Roufail, Toronto ON</p>
+
+<p>This portfolio contains Power BI report samples developed after the following training: Power BI Master Class - Dashboards and Power BI Service 2023.  I am working towards Power BI certification (MS Exam: PL-300). </p>
+
 <p>Sales Report Example 1:</p>
 
     <iframe title="Sales_Report_CourseTraining" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTZmOThmYjktYWYxZC00OGU3LWFjZDMtMmU5NzE3MTgyODYxIiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
-
+</br>
 <p>Sales Report Example 2:</p>
 
     <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODUzZDgxOWEtMWRiNS00MmUzLThjOWQtN2FkNGZiYjE3ZTYwIiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
