Publish covid charts from WHO datasets

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,5 +21,9 @@
      &nbsp;&nbsp;&nbsp;&nbsp;
     <iframe title="Sales_Report2_CourseTraining" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODUzZDgxOWEtMWRiNS00MmUzLThjOWQtN2FkNGZiYjE3ZTYwIiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
 
+<p>Covid Report Examples (real data based on WHO website):</p>
+    <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODRmMDA3NjItN2Y1OS00MjZlLThkMGQtOTM0YjRjMmFhYTA3IiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMDNhZjE3YmUtYTM4ZS00YWJmLWI4ZmQtZjVkOGQ4NTAxZDg1IiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
 
 {% endblock %}
