--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,11 @@
 
 <p><b>Website and Report Creator/Owner:</b>  Michelle Roufail, Toronto ON</p>
 
-<p>This portfolio contains Power BI report samples developed after the following training: Power BI Master Class - Dashboards and Power BI Service 2023.  I am working towards Power BI certification (MS Exam: PL-300). </p>
+<p>This portfolio contains Power BI report samples developed after the following training: Power BI Master Class - Dashboards and Power BI Service 2023.  In April 2023, I became Power BI certified by successfully passing exam: Microsoft Certification Exam </i>Power BI Data Analyst (PL-300).</i></p>
+
+<p>
+<img src="PowerBI_CertificationImage.png" alt="Power BI Certification" width="600" height="500">
+</p>
 
 <p>Sales Report Examples:</p>
 
