Add MS Power BI Certification (fix path2)

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,19 +13,19 @@
 
 <p><b>Website and Report Creator/Owner:</b>  Michelle Roufail, Toronto ON</p>
 
-<p>This portfolio contains Power BI report samples developed after the following training: Power BI Master Class - Dashboards and Power BI Service 2023.  In April 2023, I became Power BI certified by successfully passing exam: Microsoft Certification Exam </i>Power BI Data Analyst (PL-300).</i></p>
+<p>This portfolio contains Power BI report samples developed after the following training: Power BI Master Class - Dashboards and Power BI Service 2023.  In April 2023, I became Power BI certified<br> by successfully passing exam:<b> Microsoft Certification Exam </i>Power BI Data Analyst (PL-300)</i></b></p>
 
 <p>
-<img src="img/PowerBI_CertificationImage.png" alt="Power BI Certification" width="600" height="500">
+<img src="../staticfiles/admin/img/PowerBI_CertificationImage.png" alt="Power BI Certification" width="550" height="450">
 </p>
 
-<p>Sales Report Examples:</p>
+<p><b>Sales Report Examples:</b></p>
 
     <iframe title="Sales_Report_CourseTraining" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTZmOThmYjktYWYxZC00OGU3LWFjZDMtMmU5NzE3MTgyODYxIiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
      &nbsp;&nbsp;&nbsp;&nbsp;
     <iframe title="Sales_Report2_CourseTraining" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODUzZDgxOWEtMWRiNS00MmUzLThjOWQtN2FkNGZiYjE3ZTYwIiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
 <br><br>
-<p>Covid Report Examples (automated to run nightly against WHO website):</p>
+<p><b>Covid Report Examples (automated to run nightly against WHO website):</b></p>
     <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiODRmMDA3NjItN2Y1OS00MjZlLThkMGQtOTM0YjRjMmFhYTA3IiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
     &nbsp;&nbsp;&nbsp;&nbsp;
     <iframe title="Report Section" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiMDNhZjE3YmUtYTM4ZS00YWJmLWI4ZmQtZjVkOGQ4NTAxZDg1IiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
