Add MS Power BI Certification (fix path3)

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,12 +13,13 @@
 
 <p><b>Website and Report Creator/Owner:</b>  Michelle Roufail, Toronto ON</p>
 
-<p>This portfolio contains Power BI report samples developed after the following training: Power BI Master Class - Dashboards and Power BI Service 2023.  In April 2023, I became Power BI certified<br> by successfully passing exam:<b> Microsoft Certification Exam </i>Power BI Data Analyst (PL-300)</i></b></p>
-
+<p>This portfolio contains Power BI report samples developed after the following training: Power BI Master Class - Dashboards and Power BI Service 2023.  In April 2023, I became Power BI certified by successfully passing exam:<b> Microsoft Certification Exam </i>Power BI Data Analyst (PL-300)</i></b></p>
+<p><link href="https://media.licdn.com/dms/image/D562DAQE8xUa2dmJb0A/profile-treasury-image-shrink_1920_1920/0/1682961561749?e=1683568800&v=beta&t=Fcpd1-vXfkhmaJw81Qe6Ksrra6Yzf2vrWAafUSDtWTE"> </p>
+{% comment %}
 <p>
 <img src="../staticfiles/admin/img/PowerBI_CertificationImage.png" alt="Power BI Certification" width="550" height="450">
 </p>
-
+{% endcomment %}
 <p><b>Sales Report Examples:</b></p>
 
     <iframe title="Sales_Report_CourseTraining" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTZmOThmYjktYWYxZC00OGU3LWFjZDMtMmU5NzE3MTgyODYxIiwidCI6IjZjYTQ1YWYxLTViMTMtNDNlNi05OWI2LTJlZDRjYTcyNzRiNSJ9" frameborder="0" allowFullScreen="true"></iframe>
